--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <table cellspacing="20">
   <tr>
-    <td><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.wired.com%2Fphotos%2F5fb70f2ce7b75db783b7012c%2Fmaster%2Fw_2560%252Cc_limit%2FGear-Photos-597589287.jpg&imgrefurl=https%3A%2F%2Fwww.wired.com%2Fstory%2Fgoogle-photos-alternatives%2F&tbnid=bpVyGaJcPz-A7M&vet=12ahUKEwi0h9zqr474AhXEktgFHe5iDw8QMygCegUIARDeAQ..i&docid=n1jhJnrTjJ2JMM&w=2400&h=1800&q=photos&ved=2ahUKEwi0h9zqr474AhXEktgFHe5iDw8QMygCegUIARDeAQ "></td>
+    <td><img src="amarendra.png"></td>
     <td> <strong>Amarendra Singh</strong> <br>Java Developer In<strong> India's Top MNC's <a href="https://www.appbrewey.co/">App Brewery</a></a> </strong>.
       <p>Hello, I'm a Core Java and Web Developer <br>
         .I'm more interested in travelling and exploring <br>
